--- a/html/styles.css
+++ b/html/styles.css
@@ -39,3 +39,35 @@ p .outfits {
     display:inline;
     float: left;
 }
+
+.modal {
+    display:none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top:0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-attachment: rgba(0,0,0,0.4); /*opaque*/
+
+}
+.modal-content {
+    background-color: #fefefe;
+    margin:15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+}
+.close {
+    color:#aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+.close:hover, .close:focus {
+    color:black;
+    text-decoration: none;
+    cursor:pointer;
+}
